--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@vimeo/player": "^2.17.1",
+    "create-chrome-debugger": "^1.0.6",
     "joi": "^17.6.0",
     "lodash.throttle": "^4.1.1",
     "modern-normalize": "^1.1.0",
@@ -27,7 +28,7 @@
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
-    "parcel": "^2.6.0",
+    "parcel": "^2.7.0",
     "parcel-reporter-clean-dist": "^1.0.4",
     "posthtml-include": "^1.7.4"
   },
